testdata/baselines/reference/submodule/conformance/jsDeclarationsClassStaticMethodAugmentation.errors.txt
source.js(5,14): error TS2339: Property 'prop' does not exist on type '() => void'.


==== source.js (1 errors) ====
    export class Clazz {
        static method() { }
    }
    
    Clazz.method.prop = 5;
                 ~~~~
!!! error TS2339: Property 'prop' does not exist on type '() => void'.